attempted fix at theme toggler alignment

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ button {
 .moon-icon {
   position: relative;
   float: right;
-  top: 0.5vh;
+  top: 1vh;
   cursor: pointer;
 }
 .sun-icon {
@@ -86,7 +86,7 @@ button {
   position: relative;
   display: block;
   float: right;
-  top: 0.5vh;
+  top: 1vh;
   cursor: pointer;
 }
 .dark-name {
